Add workout CRUD, filtering, and exercise linking
Introduces WorkoutController and WorkoutService for full workout CRUD operations, including filtering and sorting. Adds DTOs for workout creation, update, and exercise linking. Refactors mappers and repositories to support new features and improves filtering/sorting for exercises and nutrition. Workouts now support adding and updating exercises, with improved entity mapping and transactional operations.