@@ -3,6 +3,9 @@ package com.example.fitness_tracker.service;
 import com.example.fitness_tracker.domain.dto.Exercise.UpdateExerciseDto;
 import com.example.fitness_tracker.repository.UserRepository;
 import com.example.fitness_tracker.util.InvalidEntityDataException;
+import jakarta.persistence.criteria.Predicate;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.security.core.context.SecurityContextHolder;
 import com.example.fitness_tracker.domain.dto.Exercise.CreateExerciseDto;
 import com.example.fitness_tracker.domain.dto.Exercise.ExerciseDto;
@@ -14,9 +17,9 @@ import com.example.fitness_tracker.util.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -49,11 +52,48 @@ public class ExerciseService {
                 .orElseThrow(() -> new EntityNotFoundException("Exercise", id));
     }
 
+
     public List<ExerciseDto> getAll() {
-        return exerciseRepository.findAllByDeletedAtIsNull().stream()
+        return exerciseRepository.findAllByDeletedAtIsNull()
+                .stream()
                 .map(ExerciseMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    /**
+     * Filter and sort exercises on the database side using JPA Specifications.
+     * This prevents loading all records into memory.
+     *
+     * @param name        Optional name filter (case-insensitive).
+     * @param category    Optional category filter (case-insensitive).
+     * @param sort        Sorting configuration (e.g. Sort.by("name").ascending()).
+     * @return List of filtered and sorted {@link ExerciseDto}.
+     */
+    public List<ExerciseDto> getFilteredAndSortedExercises(
+            String name,
+            String category,
+            Sort sort
+    ) {
+        Specification<Exercise> spec = (root, query, cb) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(cb.isNull(root.get("deletedAt"))); // exclude soft-deleted
+
+            if (name != null && !name.isBlank()) {
+                predicates.add(cb.like(cb.lower(root.get("name")), "%" + name.toLowerCase() + "%"));
+            }
+            if (category != null && !category.isBlank()) {
+                predicates.add(cb.like(cb.lower(root.get("muscleGroup")), "%" + category.toLowerCase() + "%"));
+            }
+            return cb.and(predicates.toArray(new Predicate[0]));
+        };
+
+        return exerciseRepository.findAll(spec, sort == null ? Sort.unsorted() : sort)
+                .stream()
+                .map(ExerciseMapper::toDto)
+                .toList();
+    }
+
+
 
     public ExerciseDto update(UUID id, UpdateExerciseDto dto) {
         Exercise existing = exerciseRepository.findByIdAndDeletedAtIsNull(id)
